# DynamicalComponentsAnalysis

./: .flake8  .gitignore  .readthedocs.yaml  .travis.yml  ComplexityComponentsAnalysis-PyTorch.ipynb  ComplexityComponentsAnalysis.ipynb  LICENSE.txt  README.md  cca.py  cca_pytorch.py  codecov.yaml  environment.yml  gp.py  kron_pca.py  methods_comparison.py  methods_comparison_testing.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  synth_data.py
.github/workflows/: dca_tests.yml  release_pypi.yml
cca/: __init__.py  analysis.py  cca.py  cov_estimation.py  cov_util.py  data_util.py  kf_util.py  kron_pca.py  methods_comparison.py  plotting.py  style.py  synth_data.py
cca/depricated/: decode_util.py  kron_pca.py
data/MOCAP/: 08_01.amc  08_02.amc  08_03.amc  08_04.amc  08_07.amc  08_08.amc  08_09.amc  08_10.amc  08_11.amc
dca/: __init__.py  analysis.py  base.py  cov_util.py  data_util.py  dca.py  methods_comparison.py  plotting.py  synth_data.py
dca/depricated/: robust_kron_pca.py
dca/plotting/: fig1.py  fig2.py
docs/source/: api.rst  conf.py  index.rst  installation.rst  introduction.rst
docs/source/dca/: analysis.rst  base.rst  cov_util.rst  data_util.rst  dca.rst  methods_comparison.rst  synth_data.rst
neuro_data/: 08_05.amc  08_06.amc
notebooks/: CCA-tests.ipynb  CepstralTest.ipynb  ComplexityComponentsAnalysis-PyTorch.ipynb  ComplexityComponentsAnalysis.ipynb  Covariance-Tests.ipynb  DynamicsTesting.ipynb  Fig1.ipynb  Fig2.ipynb  GP-knn-comparison.ipynb  GP_knn_comparison.ipynb  LorenzFig.ipynb  NHP-spikes.ipynb  NeuralData.ipynb  PI-confusion.ipynb  RNN-tests.ipynb  Regularization.ipynb  RobustKronPCA-test.ipynb  cepstral_test.ipynb  cov_viz.ipynb  deflation_test_fig.ipynb  kf_and_gpfa.ipynb  ll_results.npy  ll_results_mocap.npy  local_minima_fig.ipynb  lorenz_fig.ipynb  methods_comp_fig.ipynb  methods_comparison_testing.ipynb  movies.ipynb  neural_data.ipynb  neural_data_dim_scan.ipynb  opt_idx_results.npy  opt_idx_results_mocap.npy  pi_vs_dim.ipynb  projected_entropy_minimization.ipynb  real_data.ipynb  real_data.py  real_data_latent_loadings.ipynb  tegmark.ipynb  test_jpca.ipynb  tutorial.ipynb  (+1 more)
notebooks/cached_fig_data/: def_comp.npz  heatmaps.npz  proj_comp.npz  trajectories.npz
notebooks/depricated/: MOCAP.ipynb  Regularization.ipynb  gen_synth_data.py  local_minima.ipynb  movies.ipynb  old_comp.ipynb
notebooks/old/: NHP-spikes.ipynb
notebooks/real_data/: real_data.py
src/dca/: base.py  cov_util.py  data_util.py  dca.py  knn.py  methods_comparison.py
tests/: test_analysis.py  test_cov_util.py  test_data_util.py  test_dca.py  test_methods_comparison.py  test_synth_data.py
