[metadata]
name = dca
version = 1.0.0
author = Jesse Livezey
author_email = jesse.livezey@gmail.com
description = Dynamical Components Analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BouchardLab/DynamicalComponentsAnalysis
project_urls =
    Bug Tracker = https://github.com/JesseLivezey/easy_glm/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD-3-Clause-LBNL
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
